--- a/Wp8GeoDemo/Wp8GeoDemo/DirectionsPage.xaml
+++ b/Wp8GeoDemo/Wp8GeoDemo/DirectionsPage.xaml
@@ -1,11 +1,12 @@
 ﻿<phone:PhoneApplicationPage
-    x:Class="Wp8GeoDemo.DealPage"
+    x:Class="Wp8GeoDemo.DirectionsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:maps="clr-namespace:Microsoft.Phone.Maps.Controls;assembly=Microsoft.Phone.Maps"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
@@ -23,18 +24,12 @@
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel Grid.Row="0" Margin="12,17,0,28">
             <TextBlock Text="MY APPLICATION" Style="{StaticResource PhoneTextNormalStyle}"/>
-            <TextBlock Text="deal page" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+            <TextBlock Text="directions" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-            <StackPanel Orientation="Vertical">
-
-                <TextBlock TextWrapping="Wrap" Text="Deal:" Style="{StaticResource PhoneTextNormalStyle}"/>
-                <TextBlock x:Name="DealName" TextWrapping="Wrap" Text="deal name" Style="{StaticResource PhoneTextLargeStyle}"/>
-
-                <Button x:Name="BuyButton" Content="Buy now" VerticalAlignment="Top" HorizontalAlignment="Right" Click="BuyButton_Click"/>
-            </StackPanel>
+            <maps:Map x:Name="DirectionsMap"/>
         </Grid>
     </Grid>
 
